# src/main/java/com/sunsetbeach/model/LoginRequest.java
@@ -1,0 +1,31 @@
+package com.sunsetbeach.model;
+
+import jakarta.validation.constraints.Email;
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotNull;
+
+public class LoginRequest {
+
+    @NotNull
+    @Email(message = "Invalid email")
+    private String email;
+
+    @NotBlank
+    private String password;
+
+    public String getEmail() {
+        return email;
+    }
+
+    public void setEmail(String email) {
+        this.email = email;
+    }
+
+    public String getPassword() {
+        return password;
+    }
+
+    public void setPassword(String password) {
+        this.password = password;
+    }
+}
